--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,9 +18,11 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^7.1.1",
     "react-slick": "^0.30.3",
+    "react-toast": "^1.0.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.1",
-    "tailwind-scrollbar-hide": "^2.0.0"
+    "tailwind-scrollbar-hide": "^2.0.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
