--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.9",
+    "framer-motion": "^12.0.6",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -19,6 +21,7 @@
     "react-router-dom": "^7.1.1",
     "react-slick": "^0.30.3",
     "react-toast": "^1.0.3",
+    "react-youtube": "^10.1.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.1",
     "tailwind-scrollbar-hide": "^2.0.0",
