--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.9",
+    "backend": "file:..",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
