--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon Backend/server.js",
+    "dev": "nodemon Backend/server.js",
+    "build":"npm install && npm install --prefix Frontend  && npm run build --prefix Frontend"
   },
   "keywords": [],
   "author": "",
