--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon Backend/server.js",
+    "start": "nodemon server.js",
     "dev": "nodemon Backend/server.js",
     "build":"npm install && npm install --prefix Frontend  && npm run build --prefix Frontend"
   },
