--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.9",
     "backend": "file:..",
+    "dotenv": "^17.0.0",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
